<resources>
    <string name="app_name">VideoSharing</string>
    <string name="web_client_id">872797812659-uib3v7j9m9o2inh422o8libd5ftbu63i.apps.googleusercontent.com</string>
    <string name="youtubeAPIKey">AIzaSyAzzimVmu9nBvifyIdwaY-el371vrczEhk</string>
    <string name="main_title">Video Sharing</string>
    <string name="welcome">Welcome to the video sharing app!</string>
    <string name="watch_video_btn">Watch a YouTube Video</string>
    <string name="list_video_btn">List a YouTube Channel Video</string>
    <string name="url_prompt">Enter a URL</string>
    <string name="play_video">Play Video</string>
    <string name="youtube_url">Youtube Video URL</string>
    <string name="user">User</string>
    <string name="channel_name">Channel Name</string>
    <string name="subscribers">Subscribers</string>
    <string name="back_btn">Back to Main Menu</string>
    <string name="snipper">snippet%2Cstatistics</string>
    <string name="back_channels">Back to the Channels List</string>
</resources>