<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YoutubePlayer"
    android:orientation="vertical"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userNameTV"
            android:text="@string/user"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="10dp"
            android:id="@+id/avatarImage"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey"
        android:layout_marginBottom="10dp"/>
    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/grey"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url_prompt"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/ytVideoUrlEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/youtube_url"/>
    <Button
        android:id="@+id/ytPlayVideoBtn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/play_video"/>
    <Button
        android:id="@+id/backBtn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/back_btn"/>

</LinearLayout>