<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YoutubeApiRequest"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:background="@color/grey"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:padding="12dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/channel_name"
        android:id="@+id/channel_name"
        android:textSize="28sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/channel_name"
        android:id="@+id/channel_desc"
        android:textSize="22sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:id="@+id/subscribers"
        android:text="@string/subscribers"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>
    <Button
        android:id="@+id/backChannelBtn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:text="@string/back_btn"/>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".YoutubeApiRequest">

        <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/progressBar"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView"
            android:visibility="invisible"/>
    </FrameLayout>

</LinearLayout>